Fixed main-content-btn margin collapse

--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@ a:focus {
 }
 
 .greeting__btn {
+    display: inline-block;
     font-size: 18px;
     padding: 1em;
     border: 2px solid black;
